--- a/helm/templates/manifest.yaml
+++ b/helm/templates/manifest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend
   namespace: expense
 data:
-  DB_HOST: {{ .Value.configMap.db_host }}
+  DB_HOST: "{{ .Values.configMap.db_host }}"
 ---
 apiVersion: apps/v1
 kind: Deployment
